_infra/k8s-cloud/auth-depl-gcloud.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  # creating the pod
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: us.gcr.io/ticketing-dev-302614/auth
---
# by default the service is type ClusterIP (only for internal communication with service inside of the cluster)
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  # by default ClusterIP
  type: ClusterIP
  selector:
    app: auth
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: auth
